[YGH-375] Add pathauto configs to features

--- a/openy_taxonomy.info.yml
+++ b/openy_taxonomy.info.yml
@@ -4,8 +4,9 @@ type: module
 core: 8.x
 version: 8.x-1.0
 dependencies:
+  - ctools
   - node
-  - openy_taxonomy
+  - pathauto
   - taxonomy
   - tour
   - user
