--- a/modules/openy_txnm_color/openy_txnm_color.info.yml
+++ b/modules/openy_txnm_color/openy_txnm_color.info.yml
@@ -3,10 +3,12 @@ description: 'OpenY taxonomy color'
 type: module
 core: 8.x
 dependencies:
+  - ctools
   - field
   - jquery_colorpicker
   - openy_node
   - path
+  - pathauto
   - taxonomy
   - text
 version: 8.x-1.0
