--- a/openy_node_camp/openy_node_camp.info.yml
+++ b/openy_node_camp/openy_node_camp.info.yml
@@ -22,6 +22,7 @@ dependencies:
   - openy_prgf_3c
   - openy_prgf_4c
   - openy_prgf_blackbaud
+  - openy_prgf_camp_menu
   - openy_prgf_fc
   - openy_prgf_header
   - openy_prgf_simple_content
