--- a/config/install/field.field.node.event.field_sidebar_content.yml
+++ b/config/install/field.field.node.event.field_sidebar_content.yml
@@ -6,6 +6,7 @@ dependencies:
     - node.type.event
     - paragraphs.paragraphs_type.1c
     - paragraphs.paragraphs_type.contact_us
+    - paragraphs.paragraphs_type.event_registration
     - paragraphs.paragraphs_type.simple_content
   module:
     - entity_reference_revisions
@@ -24,6 +25,7 @@ settings:
   handler_settings:
     target_bundles:
       1c: 1c
+      event_registration: event_registration
       contact_us: contact_us
       simple_content: simple_content
     target_bundles_drag_drop:
@@ -36,6 +38,9 @@ settings:
       3c:
         weight: 22
         enabled: false
+      event_registration:
+        enabled: true
+        weight: 23
       4c:
         weight: 23
         enabled: false
@@ -55,6 +60,9 @@ settings:
         weight: 28
         enabled: false
       global_search:
+        weight: 29
+        enabled: false
+      all_testimonials:
         weight: 29
         enabled: false
       header:
@@ -83,5 +91,8 @@ settings:
         enabled: false
       whay:
         weight: 38
+        enabled: false
+      test:
+        weight: 43
         enabled: false
 field_type: entity_reference_revisions
