[YGH-371] Add media buttons to editor

--- a/config/install/editor.editor.html.yml
+++ b/config/install/editor.editor.html.yml
@@ -38,7 +38,9 @@ settings:
           name: Media
           items:
             - Blockquote
-            - DrupalImage
+            - embed_video
+            - embed_image
+            - embed_document
             - media
         -
           name: Tools
