--- a/docroot/modules/custom/ymca_retention/ymca_retention.libraries.yml
+++ b/docroot/modules/custom/ymca_retention/ymca_retention.libraries.yml
@@ -112,6 +112,13 @@ progress:
   dependencies:
     - ymca_retention/angular-app
 
+my-progress:
+  version: VERSION
+  js:
+    js/my-progress.js: {}
+  dependencies:
+    - ymca_retention/angular-app
+
 instant-win:
   version: VERSION
   js:
