--- a/openy_prgf_amenities.info.yml
+++ b/openy_prgf_amenities.info.yml
@@ -10,6 +10,7 @@ dependencies:
   - openy_location_core
   - openy_node_branch
   - openy_prgf_3c
+  - openy_taxonomy
   - paragraphs
   - taxonomy
   - user
