[YMCA-1519] Text changes

--- a/docroot/sites/default/config/staging/page_manager.page_variant.ymca_retention_challenge.yml
+++ b/docroot/sites/default/config/staging/page_manager.page_variant.ymca_retention_challenge.yml
@@ -20,7 +20,7 @@ variant_settings:
       label: '[YMCA Retention] Campaign intro'
       provider: ymca_retention
       label_display: '0'
-      slogan: 'Recharge Challenge'
+      slogan: 'Y Recharge Challenge'
       show_picture: true
       region: header
       weight: -3
