--- a/docroot/sites/default/config/staging/ymca_retention.instant_win.yml
+++ b/docroot/sites/default/config/staging/ymca_retention.instant_win.yml
@@ -27,10 +27,10 @@ loss_messages_long_1:
 loss_messages_long_2:
   - 'Stay active for more chances to win.'
   - 'Complete more challenge activities to try again.'
-  - 'Show your Y spirit for another shot at prizes.'
+  - 'Show your Y recharge for another shot at prizes.'
   - 'Keep up the great work to give it another shot.'
   - 'Keep coming back to check the chances you earn.'
-  - 'But you''re really showing your Y spirit!'
+  - 'But you''re really showing your Y recharge!'
 product_pool:
   - AMZN
   - AMCT
