--- a/docroot/sites/default/config/staging/page_manager.page.ymca_retention_challenge_pages.yml
+++ b/docroot/sites/default/config/staging/page_manager.page.ymca_retention_challenge_pages.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: ymca_retention_challenge_pages
-label: 'YMCA Y Spirit'
+label: 'YMCA Y Recharge'
 use_admin_theme: false
 path: '/challenge/{string}'
 access_logic: and
