--- a/docroot/sites/default/config/staging/page_manager.page_variant.ymca_retention_challenge_default.yml
+++ b/docroot/sites/default/config/staging/page_manager.page_variant.ymca_retention_challenge_default.yml
@@ -8,7 +8,7 @@ dependencies:
     - panels
     - system
 id: ymca_retention_challenge_default
-label: 'YMCA Y Spirit'
+label: 'YMCA Y Recharge'
 variant: panels_variant
 variant_settings:
   blocks: {  }
@@ -19,7 +19,7 @@ variant_settings:
   layout: ymca-retention
   layout_settings:
     extra_classes: ''
-  page_title: 'YMCA Y Spirit'
+  page_title: 'YMCA Y Recharge'
   storage_type: page_manager
   storage_id: ymca_retention_challenge_default
   builder: standard
