--- a/docroot/sites/default/config/staging/page_manager.page_variant.ymca_retention_challenge_team.yml
+++ b/docroot/sites/default/config/staging/page_manager.page_variant.ymca_retention_challenge_team.yml
@@ -9,7 +9,7 @@ dependencies:
     - system
     - ymca_retention
 id: ymca_retention_challenge_team
-label: 'YMCA Y Spirit'
+label: 'YMCA Y Recharge'
 variant: panels_variant
 variant_settings:
   blocks:
@@ -41,7 +41,7 @@ variant_settings:
   weight: 0
   layout: onecol
   layout_settings: {  }
-  page_title: 'YMCA Y Spirit'
+  page_title: 'YMCA Y Recharge'
   storage_type: page_manager
   storage_id: ymca_retention_challenge_team
   builder: standard
