Add confi module to profile dependencies

--- a/openy.info.yml
+++ b/openy.info.yml
@@ -47,6 +47,7 @@ dependencies:
   # Contrib modules.
   - features
   - features_ui
+  - config_import
   - field_group
   - address
   - paragraphs
