--- a/composer.json
+++ b/composer.json
@@ -122,7 +122,7 @@
         "drupal-composer/drupal-scaffold": "^2.0.0",
         "drupal/core": "8.2.6",
         "drupal/features": "3.2",
-        "drupal/confi": "1.x-dev",
+        "drupal/confi": "1.3",
         "drupal/config_update": "1.3",
         "drupal/entity": "1.0-alpha4",
         "drupal/media_entity": "1.6",
