--- a/modules/openy_features/openy_location/modules/openy_loc_branch/config/install/field.field.node.branch.field_location_fax.yml
+++ b/modules/openy_features/openy_location/modules/openy_loc_branch/config/install/field.field.node.branch.field_location_fax.yml
@@ -6,6 +6,10 @@ dependencies:
     - node.type.branch
   module:
     - telephone
+third_party_settings:
+  datalayer:
+    expose: 1
+    label: field_location_fax
 id: node.branch.field_location_fax
 field_name: field_location_fax
 entity_type: node
