--- a/modules/openy_features/openy_location/modules/openy_loc_facility/config/install/field.field.node.facility.field_location_directions.yml
+++ b/modules/openy_features/openy_location/modules/openy_loc_facility/config/install/field.field.node.facility.field_location_directions.yml
@@ -6,6 +6,10 @@ dependencies:
     - node.type.facility
   module:
     - link
+third_party_settings:
+  datalayer:
+    expose: 1
+    label: field_location_directions
 id: node.facility.field_location_directions
 field_name: field_location_directions
 entity_type: node
