--- a/modules/openy_features/openy_location/modules/openy_loc_facility/config/install/field.field.node.facility.field_location_email.yml
+++ b/modules/openy_features/openy_location/modules/openy_loc_facility/config/install/field.field.node.facility.field_location_email.yml
@@ -4,6 +4,10 @@ dependencies:
   config:
     - field.storage.node.field_location_email
     - node.type.facility
+third_party_settings:
+  datalayer:
+    expose: 1
+    label: field_location_email
 id: node.facility.field_location_email
 field_name: field_location_email
 entity_type: node
