--- a/modules/openy_features/openy_node/modules/openy_node_blog/config/install/core.entity_view_display.node.blog.full.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_blog/config/install/core.entity_view_display.node.blog.full.yml
@@ -4,11 +4,13 @@ dependencies:
   config:
     - core.entity_view_mode.node.full
     - field.field.node.blog.field_blog_category
+    - field.field.node.blog.field_blog_color
     - field.field.node.blog.field_blog_description
     - field.field.node.blog.field_blog_image
     - field.field.node.blog.field_blog_location
     - field.field.node.blog.field_blog_related
     - field.field.node.blog.field_blog_style
+    - field.field.node.blog.field_blog_text_color
     - field.field.node.blog.field_content
     - field.field.node.blog.field_sidebar_content
     - node.type.blog
@@ -77,4 +79,6 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_blog_color: true
   field_blog_style: true
+  field_blog_text_color: true
