--- a/modules/openy_features/openy_node/modules/openy_node_blog/config/install/field.field.node.blog.field_blog_description.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_blog/config/install/field.field.node.blog.field_blog_description.yml
@@ -6,6 +6,10 @@ dependencies:
     - node.type.blog
   module:
     - text
+third_party_settings:
+  datalayer:
+    expose: 1
+    label: field_blog_description
 id: node.blog.field_blog_description
 field_name: field_blog_description
 entity_type: node
