--- a/modules/openy_features/openy_node/modules/openy_node_blog/config/install/field.field.node.blog.field_blog_style.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_blog/config/install/field.field.node.blog.field_blog_style.yml
@@ -6,6 +6,10 @@ dependencies:
     - node.type.blog
   module:
     - options
+third_party_settings:
+  datalayer:
+    expose: 1
+    label: field_blog_style
 id: node.blog.field_blog_style
 field_name: field_blog_style
 entity_type: node
