--- a/modules/openy_features/openy_node/modules/openy_node_mbrshp/config/install/field.field.node.membership.field_mbrshp_description.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_mbrshp/config/install/field.field.node.membership.field_mbrshp_description.yml
@@ -6,6 +6,10 @@ dependencies:
     - node.type.membership
   module:
     - text
+third_party_settings:
+  datalayer:
+    expose: 1
+    label: field_mbrshp_description
 id: node.membership.field_mbrshp_description
 field_name: field_mbrshp_description
 entity_type: node
