--- a/modules/openy_features/openy_node/modules/openy_node_program/config/install/field.field.node.program.field_program_description.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_program/config/install/field.field.node.program.field_program_description.yml
@@ -6,6 +6,10 @@ dependencies:
     - node.type.program
   module:
     - text
+third_party_settings:
+  datalayer:
+    expose: 1
+    label: field_program_description
 id: node.program.field_program_description
 field_name: field_program_description
 entity_type: node
