[YMCA-1531] Added form and batch boilerplate to recalculate members visits goal.

--- a/docroot/modules/custom/ymca_retention/ymca_retention.links.task.yml
+++ b/docroot/modules/custom/ymca_retention/ymca_retention.links.task.yml
@@ -21,7 +21,7 @@ ymca_retention.settings:
   base_route: system.admin_config_system
 
 ymca_retention.settings_general:
-  title: 'YMCA Retention Settings'
+  title: 'Settings'
   description: 'YMCA Retention Settings'
   route_name: ymca_retention.settings
   parent_id: ymca_retention.settings
@@ -54,4 +54,10 @@ ymca_retention.generate_content:
   title: 'Generate content'
   description: 'Generate members, checkins, bonuses.'
   route_name: ymca_retention.settings_generate_content
+  parent_id: ymca_retention.settings
+
+ymca_retention.calculate_goals:
+  title: 'Calculate Goals'
+  description: 'Calculate member goals.'
+  route_name: ymca_retention.settings_calculate_goals
   parent_id: ymca_retention.settings
