--- a/openy_node_branch.info.yml
+++ b/openy_node_branch.info.yml
@@ -29,6 +29,7 @@ dependencies:
   - openy_prgf_blackbaud
   - openy_prgf_fc
   - openy_prgf_header
+  - openy_prgf_panorama
   - openy_prgf_simple_content
   - openy_prgf_small_banner
   - openy_svg_formatter
