[YGH-403] Add panorama paragraph to CTs

--- a/openy_prgf_panorama/config/install/core.entity_view_display.paragraph.panorama.default.yml
+++ b/openy_prgf_panorama/config/install/core.entity_view_display.paragraph.panorama.default.yml
@@ -11,9 +11,10 @@ mode: default
 content:
   field_prgf_panorama:
     weight: 0
-    label: above
+    label: hidden
     settings:
       link: true
+      view_mode: default
     third_party_settings: {  }
-    type: entity_reference_label
+    type: entity_reference_entity_view
 hidden: {  }
