--- a/openy_prgf_panorama/config/install/field.field.block_content.panorama_block.field_panorama_archive.yml
+++ b/openy_prgf_panorama/config/install/field.field.block_content.panorama_block.field_panorama_archive.yml
@@ -19,7 +19,7 @@ default_value_callback: ''
 settings:
   file_directory: '[date:custom:Y]-[date:custom:m]'
   file_extensions: 'zip ggpkg'
-  max_filesize: ''
+  max_filesize: '50 MB'
   description_field: false
   handler: 'default:file'
   handler_settings: {  }
